Fix ofr footer overlapping content

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ html {
 }
 
 body {
+    padding: 0px 50px;
     min-height: 100%;
     font-family: 'Roboto', sans-serif;
     background-color: var(--primary-light);
@@ -33,18 +34,19 @@ main {
     justify-content: center;
     gap: 50px;
     max-width: 100vw;
+    padding-bottom: 40px;
 }
 
 
 /* HEADER */
 
 .primary-header {
-    padding: 10px 0px;
+    padding: 10px 0px 25px;
 }
 
 .title {
     text-align: center;
-    font-size: 80px;
+    font-size: 75px;
 }
 
 
@@ -55,9 +57,9 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 30px;
+    gap: 25px;
     width: 200px;
-    padding: 10px;
+    padding: 10px 10px 10px 0px;
 }
 
 button,
